# Nexcom-Minibot

./: CMakeLists.txt  Nexmo.cpp  Nexmo.h  README.md  aruco_test.cpp  aruco_test.h
aruco/: CMakeLists.txt  aruco_test.cpp
include/: NexMotion_Handler.h  motion_task.cpp  motion_task.h
kalmanfilter/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  main.cpp
